<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MuseumsActivity">

    <LinearLayout
        android:layout_width="394dp"
        android:layout_height="716dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:onClick="goToMet"
            android:text="@string/met"
            android:textAlignment="center" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:onClick="goToGug"
            android:text="@string/guggenheim"
            android:textAlignment="center" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:onClick="goToNatural"
            android:text="@string/natural"
            android:textAlignment="center" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:onClick="goToModern"
            android:text="@string/modern"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textAlignment="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
